# web

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  rxconfig.py
.github/workflows/: pages.yml
assets/: events.json
pyzgz/: __init__.py  about_page.py  blog_page.py  comunity_page.py  contact_page.py  events_page.py  index_page.py  layout.py  main.py  pyzgz.py  talks_page.py
scripts/: fetch_meetup.py
